fix: Fix scrollbar styles

--- a/client/src/components/Boards/Boards.module.scss
+++ b/client/src/components/Boards/Boards.module.scss
@@ -85,7 +85,6 @@
     height: 56px;
     overflow-x: auto;
     overflow-y: hidden;
-    scrollbar-width: thin;
 
     &:hover {
       height: 38px;
