--- a/client/src/components/Header/NotificationsStep.module.scss
+++ b/client/src/components/Header/NotificationsStep.module.scss
@@ -49,7 +49,6 @@
     max-height: 60vh;
     overflow-x: hidden;
     overflow-y: auto;
-    scrollbar-width: thin;
 
     &::-webkit-scrollbar {
       width: 5px;
