--- a/client/src/components/List/List.module.scss
+++ b/client/src/components/List/List.module.scss
@@ -43,7 +43,6 @@
     max-height: calc(100vh - 268px);
     overflow-x: hidden;
     overflow-y: auto;
-    scrollbar-width: thin;
     width: 290px;
 
     &:hover {
